--- a/app/src/main/res/layout/tv.xml
+++ b/app/src/main/res/layout/tv.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:textColor="#5BC4ED"
+    android:background="@drawable/tv_bg"
     android:text="Helloworld" >
 
 </TextView>
